--- a/application/playground/source/index.html
+++ b/application/playground/source/index.html
@@ -25,7 +25,7 @@
     "constructorSettings": {
         "innerLayout": "qx.ui.layout.Canvas" 
     },
-    "blueprintScripts": {
+    "scripts": {
         "buttonListener": "$mybutton.addListener(\"execute\", function(e) {alert(\"Hello World!\");});" 
     },
     "contents": [
@@ -69,7 +69,7 @@
     "constructorSettings": {
         "innerLayout": "qx.ui.layout.Canvas" 
     },
-    "blueprintScripts": {
+    "scripts": {
         "showWindow": "$win.show();" 
     },
     "contents": []
