--- a/application/designer/source/index.html
+++ b/application/designer/source/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>designer</title>
+  <script src="/misc/ace/build/src/ace.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/misc/ace/build/src/mode-json.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="script/designer.js"></script>
 </head>
 <body></body>
