--- a/application/designer/source/index.html
+++ b/application/designer/source/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>designer</title>
+  <script type="text/javascript" src="/misc/JSV/lib/uri/uri.js"></script>
+  <script type="text/javascript" src="/misc/JSV/lib/jsv.js"></script>
+  <script type="text/javascript" src="/misc/JSV/lib/json-schema-draft-03.js"></script>
+  <script type="text/javascript" src="/misc/jsonlint/lib/jsonlint.js"></script>
   <script src="/misc/ace/build/src/ace.js" type="text/javascript" charset="utf-8"></script>
   <script src="/misc/ace/build/src/mode-json.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="script/designer.js"></script>
