--- a/application/designer/source/index.html
+++ b/application/designer/source/index.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="/misc/jsonlint/lib/jsonlint.js"></script>
   <script src="/misc/ace/build/src/ace.js" type="text/javascript" charset="utf-8"></script>
   <script src="/misc/ace/build/src/mode-json.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/misc/ace/build/src/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="script/designer.js"></script>
 </head>
 <body></body>
